src/rules/snapshots/pg_migration_lint__rules__pgm109__tests__alter_column_type_float4_fires.snap
---
source: src/rules/pgm109.rs
expression: findings
---
- rule_id: PGM109
  severity: Minor
  message: "Column 'reading' on 'sensors' uses 'real'. Floating-point types have precision issues (0.1 + 0.2 ≠ 0.3). Use numeric for exact values."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
