src/rules/snapshots/pg_migration_lint__rules__pgm109__tests__fires_create_table_float8.snap
---
source: src/rules/pgm109.rs
expression: findings
---
- rule_id: PGM109
  severity: Minor
  message: "Column 'price' on 'products' uses 'double precision'. Floating-point types have precision issues (0.1 + 0.2 ≠ 0.3). Use numeric for exact values."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
